koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@import url("../lib/yui/reset-fonts-grids.css") screen;
@import url("../lib/yui/skin.css");

input:focus, textarea:focus {
    border-color:#538200;
    border-style:solid;
    border-radius: 4px;
}

::selection      { background:#538200; color:#ffffff; /* Safari and Opera */ }
::-moz-selection  { background:#538200; color:#ffffff; /* Firefox */ }

a, a:link, a:visited {
    color : #004d99;
    text-decoration: none;
}

a:hover, a:active {
    color : #538200;
    text-decoration: none;
}

.yui-button {
    border-radius: 5px;
}

.yui-button .first-child {
    border-radius: 5px;
}

.matched_orderline {
       background-color: #F0E8F9;
}

.yui-button,.yui-button a:link,.yui-button a:visited {
	color : #000;
}

a.yuimenuitemlabel {
        color: #000000;
}

.overdue,
.debit {
	color : #cc0000;
}

a.popup {
	background : transparent url("../../img/pop-up-link.png") center right no-repeat;
	padding-right : 15px;
}

body {
	text-align : left;
    padding:0 0 4em 0;
  font-family: arial, verdana, helvetica, sans-serif;
}

br.clear {
	clear : both;
	line-height : 1px;
}

form {
	display : inline;
}

form.confirm {
	display : block;
	text-align : center;
}

h1 {
	font-size : 161.6%;
	font-weight : bold;
}

h2 {
	font-size : 146.5%;
	font-weight : bold;
}

h3 {
	font-size : 131%;
	font-weight : bold;
}

h4 {
	font-size : 116%;	
	font-weight : bold;
}

h5 {
	font-size : 100%;	
	font-weight : bold;
}

h6 {
	font-size : 93%;
	font-weight : bold;
}

h1,h2,h3,h4,h5,h6 {
	margin : .3em 0;
}

p {
	margin: .5em 0 .5em 0;
}

strong {
	font-weight : bold;
}

strong em {
	font-weight : bold;
	font-style : italic;
}

em, cite {
	font-style : italic;
}

em strong {
	font-weight : bold;
	font-style : italic;
}

.subfield-label {
    font-style : italic;
}

.subfield-label span.subfield-code {
    font-weight : bold;
}

#navmenulist li {
	padding : .2em 0;
	list-style-image : url("../../img/arrow-bullet.gif");
	border-bottom : 1px solid #EEE;
}

#navmenulist li a {
	text-decoration : none;
}

#doc, #doc1, #doc2, #doc3 {
	padding-top : 1em;
}

#login_controls	 {
	position : absolute;
	right : .5em;
    padding: .4em .5em;
}

ul {
	padding-left : 1.1em;
}

ul li {
	list-style-type : disc;
}

ul li li {
	list-style-type : circle;
}

ol {
	padding-left : 1.5em;
}

ol li {
	list-style : decimal;
}

.gradient {
    background-image: linear-gradient(top, rgb(230,240,242) 1%, rgb(255,255,255) 99%);
    background-image: -o-linear-gradient(top, rgb(230,240,242) 1%, rgb(255,255,255) 99%);
    background-image: -moz-linear-gradient(top, rgb(230,240,242) 1%, rgb(255,255,255) 99%);
    background-image: -webkit-linear-gradient(top, rgb(230,240,242) 1%, rgb(255,255,255) 99%);
    background-image: -ms-linear-gradient(top, rgb(230,240,242) 1%, rgb(255,255,255) 99%);

    background-image: -webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(0.1, rgb(230, 240, 242)),
        color-stop(0.99, rgb(255,255,255))
    );
    display: inline-block;
    width:100%;
}

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.clearfix {
    display: inline-block;
}

/* Hides from IE-mac \*/
* html .clearfix {height: 1%;}
.clearfix {display: block;}
/* End hide from IE-mac */

table {
	border-collapse : collapse;
	border-top : 1px solid #BCBCBC;
	border-right : 1px solid #BCBCBC;
}

table.invis,
table.invis tr,
table.invis td,
tr.highlight table.invis td {
	border : none;
}

td, th {
	border-bottom : 1px solid #BCBCBC;
	border-left : 1px solid #BCBCBC;
	padding : .2em .3em;
}

td {
	background-color : White;
	vertical-align : top;
}

table.indexes td {
    vertical-align : middle;
}

td.borderless {
    border-collapse : separate;
    border : 0 none;
}

td.data,
th.data {
	font-family : "Courier New", Courier, monospace;
	text-align : right;
}

th {
	background-color : #E8E8E8;
	font-weight : bold;
	text-align : center;
}

table+table {
	margin-top : 1em;
}

#editions table, #editions td {
	border : 0;
}

.highlighted-row { background-color: orange !important }

tr.highlight td,
tr.highlight th,
tr.odd td,
tr.odd.highlight td {
	background-color : #F3F3F3;
    border : 1px solid #BCBCBC;
    border-right : 1px solid #BCBCBC;
}

tr.even td, tr.even.highlight td {
	background-color: #FFF;
    border-right : 1px solid #BCBCBC;
}

.overdue td.od {
	color : #cc0000;
	font-weight : bold;
}

tr.warn td {
	background-color: #FF9090;
}

tr.onissue td {
	background-color: #FFFFCC;
}

tr.odd.onissue td {
	background-color: #FFFFE1;
}

tfoot td {
	background-color : #f3f3f3;
	font-weight : bold;
}

td.total {
	text-align : right;
}

caption {
	font-size : 133.9%;
	font-weight : bold;
	margin : .3em 0;
}

span.problem {
	background-color : #FFFFCC;
	color : #990000;
	font-weight : bold;
	line-height : 1.7em;
}

fieldset {
	margin : 1em 1em 1em 0;
	padding : 1em;
    background-color:#f4f8f9;
    border:2px solid #b9d8d9;
    border-radius:5px;
}

legend {
	font-size : 123.1%;
	font-weight : bold;
    border:2px solid #b9d8d9;
    background-color:#ffffff;
    border-radius:3px;
    padding: 0.2em 0.5em;
}

#breadcrumbs {
    background-color : #e6f0f2;
    clear : both;
    font-size : 90%;
    padding :.2em .5em .4em 10px;
    margin : 0;
}

#header+#breadcrumbs {
	margin-top : 1em;
}

div.justify {
    text-align: justify;
}

div#header_search {
	background-position : .5em .5em;
	background-repeat : no-repeat;
	float: left;
	margin: .3em 0 .5em 0;
}

div#header_search input {
	font-size : 1.3em;
}

div#header_search div.residentsearch {
	border : 0;
    border-bottom : 1px solid #85ca11;
	padding : 0 0 .2em 0;
}

div#reserves,div#checkouts {
        border : 1px solid #B9D8D9;
	padding : 1em;
}

.tip {
	font-size: 93%;
	color : Gray;
}

.single-line {
	white-space: nowrap;
}

.ex {
	font-family : "Courier New", Courier, fixed-width;
	font-weight : bold;
}


div.yui-b h5 {
	font-size : 100%;
	margin : .5em 0;
}

dt {
	font-weight : bold;
}
/* ... */

